[package]
name = "common-runtime"
description = "Common code shared between all runtimes"
license.workspace = true
authors.workspace = true
edition.workspace = true
version.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["std"]
no_std = []
constant-fees = []
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-authority-members/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-certification/runtime-benchmarks",
	"pallet-distance/runtime-benchmarks",
	"pallet-duniter-account/runtime-benchmarks",
	"pallet-duniter-wot/runtime-benchmarks",
	"pallet-identity/runtime-benchmarks",
	"pallet-membership/runtime-benchmarks",
	"pallet-offences/runtime-benchmarks",
	"pallet-provide-randomness/runtime-benchmarks",
	"pallet-quota/runtime-benchmarks",
	"pallet-smith-members/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-transaction-payment/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"pallet-universal-dividend/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"sp-staking/runtime-benchmarks",
]
std = [
	"codec/std",
	"duniter-primitives/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-authority-members/std",
	"pallet-babe/std",
	"pallet-balances/std",
	"pallet-certification/std",
	"pallet-distance/std",
	"pallet-duniter-account/std",
	"pallet-duniter-wot/std",
	"pallet-identity/std",
	"pallet-membership/std",
	"pallet-offences/std",
	"pallet-provide-randomness/std",
	"pallet-quota/std",
	"pallet-session/std",
	"pallet-smith-members/std",
	"pallet-timestamp/std",
	"pallet-treasury/std",
	"pallet-universal-dividend/std",
	"scale-info/std",
	"serde/std",
	"sp-arithmetic/std",
	"sp-consensus-babe/std",
	"sp-core/std",
	"sp-membership/std",
	"sp-runtime/std",
	"sp-staking/std",
	"sp-weights/std",
]
try-runtime = [
	"duniter-primitives/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-authority-members/try-runtime",
	"pallet-babe/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-certification/try-runtime",
	"pallet-distance/try-runtime",
	"pallet-duniter-account/try-runtime",
	"pallet-duniter-wot/try-runtime",
	"pallet-identity/try-runtime",
	"pallet-membership/try-runtime",
	"pallet-offences/try-runtime",
	"pallet-provide-randomness/try-runtime",
	"pallet-quota/try-runtime",
	"pallet-session/try-runtime",
	"pallet-smith-members/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-treasury/try-runtime",
	"pallet-universal-dividend/try-runtime",
	"sp-membership/try-runtime",
	"sp-runtime/try-runtime",
]

[dependencies]
codec = { workspace = true, features = ["derive"] }
duniter-primitives = { workspace = true }
frame-benchmarking = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-authority-members = { workspace = true }
pallet-babe = { workspace = true }
pallet-balances = { workspace = true }
pallet-certification = { workspace = true }
pallet-distance = { workspace = true }
pallet-duniter-account = { workspace = true }
pallet-duniter-wot = { workspace = true }
pallet-identity = { workspace = true }
pallet-membership = { workspace = true }
pallet-offences = { workspace = true }
pallet-provide-randomness = { workspace = true }
pallet-quota = { workspace = true }
pallet-session = { workspace = true }
pallet-smith-members = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-treasury = { workspace = true }
pallet-universal-dividend = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }
serde = { workspace = true }
smallvec = { workspace = true }
sp-arithmetic = { workspace = true }
sp-consensus-babe = { workspace = true }
sp-core = { workspace = true }
sp-membership = { workspace = true }
sp-runtime = { workspace = true }
sp-staking = { workspace = true }
sp-weights = { workspace = true }
